--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "file-type": "^21.0.0",
     "fuse.js": "^7.1.0",
     "mcp-proxy": "^5.0.0",
+    "node-fetch": "^3.3.2",
     "strict-event-emitter-types": "^2.0.0",
     "undici": "^7.10.0",
     "uri-templates": "^0.2.0",
