--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,19 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.js", "use": "@vercel/node" }
+    { 
+      "src": "index.js", 
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["dist/**", "tools/**", "package.json"]
+      }
+    }
   ],
-  "installCommand": "npm install"
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.js" }
+  ],
+  "installCommand": "npm install && npm run build",
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
