--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,15 @@
 {
   "version": 2,
-  "builds": [
-    { 
-      "src": "index.js", 
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["dist/**", "tools/**", "package.json"]
-      }
+  "functions": {
+    "index.js": {
+      "runtime": "@vercel/node@3"
     }
-  ],
+  },
   "routes": [
     { "src": "/(.*)", "dest": "/index.js" }
   ],
-  "installCommand": "npm install && npm run build",
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
   "env": {
     "NODE_ENV": "production"
   }
