--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,12 @@
 {
   "version": 2,
-  "functions": {
-    "index.js": {
-      "runtime": "@vercel/node@3"
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node@3.0.12"
     }
-  },
+  ],
   "routes": [
     { "src": "/(.*)", "dest": "/index.js" }
-  ],
-  "buildCommand": "npm run build",
-  "installCommand": "npm install",
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
