Fix: Remove FastMCP Tool dependency and simplify Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
     {
       "src": "index.js",
-      "use": "@vercel/node@3.0.12"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
