--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-perfectionist": "^4.14.0",
     "eslint-plugin-prettier": "^5.4.1",
+    "eventsource": "^4.0.0",
     "eventsource-client": "^1.1.3",
     "get-port-please": "^3.1.2",
     "jiti": "^2.4.2",
